changed library location

--- a/man/sdagent.conf.5
+++ b/man/sdagent.conf.5
@@ -143,14 +143,14 @@ The agent's home working directory.
 Default: /var/tmp/sca
 .RE
 .TP
-PATTERN_LIBRARY_BASE
+SCA_PATTERN_PATH
 The supportconfig pattern SVN repository directory. The perl patterns used to analyze the supportconfig text files are located here. 
 .RS
 Default: /usr/lib/sca/patterns/
 .RE
 .TP
 PATTERNS
-The supportconfig pattern repository manifest. It contains a list of all the usable patterns found in PATTERN_LIBRARY_BASE and is updated by \fBsdagent-patterns\fR(1).
+The supportconfig pattern repository manifest. It contains a list of all the usable patterns found in SCA_PATTERN_PATH and is updated by \fBsdagent-patterns\fR(1).
 .RS
 Default: /var/tmp/sca/manifest.patterns
 .RE
