--- a/man/sdagent.conf.5
+++ b/man/sdagent.conf.5
@@ -240,8 +240,7 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 .PP
 You should have received a copy of the GNU General Public License
-along with this program; if not, write to the Free Software
-Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+along with this program; if not, see <http://www.gnu.org/licenses/>.
 .SH SEE ALSO
 .BR \fBsdagent\fR (1)
 .BR \fBsdagent-worker\fR (1)
