changed man pages to section 8

--- a/man/sdagent-health.8
+++ b/man/sdagent-health.8
@@ -4,7 +4,7 @@ sdagent-health - SCA Agent Health Check Tool
 .SH SYNOPSIS
 sdagent-health
 .SH DESCRIPTION
-Monitors the current health of Agent Server and it's Agent Worker Threads. Runs on the Agent Server.
+Monitors the current health of agent server and it's worker threads. Runs on the agent server.
 .SH OPTIONS
 .TP
 None
