--- a/man/sdagent-monitor.8
+++ b/man/sdagent-monitor.8
@@ -1,10 +1,13 @@
-.TH sdagent-monitor 1 "13 Feb 2013" "sdagent-monitor" "Support Utilities Manual"
+.TH sdagent-monitor 8 "18 Mar 2014" "sdagent-monitor" "Support Utilities Manual"
 .SH NAME
-sdagent-monitor - Supportconfig Diagnostic
+sdagent-monitor - SCA Agent Monitor Tool
 .SH SYNOPSIS
-sdagent-monitor [OPTIONS]
+sdagent-monitor
 .SH DESCRIPTION
+Monitors the agent server CPU utilization
 .SH OPTIONS
+.TP
+None
 .SH AUTHOR
 Jason Record <jrecord@suse.com>
 .SH COPYRIGHT
