fixed component references

--- a/man/sdagent-config.8
+++ b/man/sdagent-config.8
@@ -1,6 +1,6 @@
-.TH sdagent-config 8 "18 Mar 2014" "sdagent-config" "Supportconfig Diagnostic Manual"
+.TH sdagent-config 8 "18 Mar 2014" "sdagent-config" "Supportconfig Analysis Manual"
 .SH NAME
-sdagent-config - Supportconfig Diagnostic Agent Configuration
+sdagent-config - SCA Agent Configuration Tool
 .SH SYNOPSIS
 sdagent-config -h <broker> -p <sdagent_password> -i <input_url> -e <admin_email> [OPTIONS]
 .SH DESCRIPTION
