--- a/man/sdagent-health.conf.5
+++ b/man/sdagent-health.conf.5
@@ -1,4 +1,4 @@
-.TH sdagent-health.conf 5 "01 Mar 2013" "sdagent-patterns.conf" "Supportconfig Diagnostic Manual"
+.TH sdagent-health.conf 5 "18 Mar 2014" "sdagent-patterns.conf" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent-health.conf - Supportconfig Diagnostic Agent Health Tool specific configuration file
 .SH DESCRIPTION
@@ -21,5 +21,5 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, see <http://www.gnu.org/licenses/>.
 .SH SEE ALSO
 .BR sdagent.conf (5)
-.BR sdagent-health (1)
+.BR sdagent-health (8)
 
