--- a/man/sdagent-patterns.8
+++ b/man/sdagent-patterns.8
@@ -1,8 +1,8 @@
-.TH sdagent-patterns 8 "18 Mar 2014" "sdagent-patterns" "Supportconfig Diagnostic Manual"
+.TH sdagent-patterns 8 "18 Mar 2014" "sdagent-patterns" "Supportconfig Analysis Manual"
 .SH NAME
-sdagent-patterns - Supportconfig Diagnostic Agent Pattern Updater
+sdagent-patterns - SCA Agent Pattern Updater
 .SH SYNOPSIS
-sdagent-patterns [-u]
+sdagent-patterns [OPTIONS]
 .SH DESCRIPTION
 Checks out and updates the local SVN copy of the Server Diagnostic Patterns from Google code. If you don't have external Internet access, then you will need to exclude \fBsdagent-patterns\fR from your cron entries.
 .SH OPTIONS
