--- a/man/sdagent-patterns.conf.5
+++ b/man/sdagent-patterns.conf.5
@@ -1,4 +1,4 @@
-.TH sdagent-patterns.conf 5 "01 Mar 2013" "sdagent-patterns.conf" "Supportconfig Diagnostic Manual"
+.TH sdagent-patterns.conf 5 "01 Mar 2013" "sdagent-patterns.conf" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent-patterns.conf - Supportconfig Diagnostic Agent Pattern Updater specific configuration file
 .SH DESCRIPTION
