--- a/man/sdagent-worker.8
+++ b/man/sdagent-worker.8
@@ -1,6 +1,6 @@
-.TH sdagent-worker 8 "18 Mar 2014" "sdagent-worker" "Supportconfig Diagnostic Manual"
+.TH sdagent-worker 8 "18 Mar 2014" "sdagent-worker" "Supportconfig Analysis Manual"
 .SH NAME
-sdagent-worker - Supportconfig Diagnostic Agent Worker Thread
+sdagent-worker - SCA Agent Worker Thread
 .SH SYNOPSIS
 sdagent-worker -l LOGLEVEL_WORKER  -i "AGENT_ID,WORKER_ID,ARCHIVE_ID" -p WORKER_HOME -a ARCHIVE_FILE
 .SH DESCRIPTION
