--- a/man/sdagent-worker.conf.5
+++ b/man/sdagent-worker.conf.5
@@ -1,4 +1,4 @@
-.TH sdagent-worker.conf 5 "01 Mar 2013" "sdagent-worker.conf" "Supportconfig Diagnostic Manual"
+.TH sdagent-worker.conf 5 "01 Mar 2013" "sdagent-worker.conf" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent-worker.conf - Supportconfig Diagnostic Agent Worker Thread specific configuration file
 .SH DESCRIPTION
