--- a/man/sdagent.8
+++ b/man/sdagent.8
@@ -1,6 +1,6 @@
-.TH sdagent 8 "18 Mar 2014" "sdagent" "Supportconfig Diagnostic Manual"
+.TH sdagent 8 "18 Mar 2014" "sdagent" "Supportconfig Analysis Manual"
 .SH NAME
-sdagent - Supportconfig Diagnostic Agent
+sdagent - Supportconfig Analysis Agent Manager
 .SH SYNOPSIS
 sdagent [OPTIONS]
 .SH DESCRIPTION
