--- a/man/sdagent.conf.5
+++ b/man/sdagent.conf.5
@@ -1,4 +1,4 @@
-.TH sdagent.conf 5 "16 Jan 2014" "sdagent.conf" "Supportconfig Diagnostic Manual"
+.TH sdagent.conf 5 "18 Mar 2014" "sdagent.conf" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent.conf - Supportconfig Diagnostic Agent configuration file
 .SH DESCRIPTION
@@ -242,6 +242,6 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program; if not, see <http://www.gnu.org/licenses/>.
 .SH SEE ALSO
-.BR \fBsdagent\fR (1)
-.BR \fBsdagent-worker\fR (1)
-.BR sdagent-config (1)
+.BR \fBsdagent\fR (8)
+.BR \fBsdagent-worker\fR (8)
+.BR sdagent-config (8)
