--- a/man/sdagent.8
+++ b/man/sdagent.8
@@ -1,6 +1,6 @@
-.TH sdagent 8 "18 Mar 2014" "sdagent" "Supportconfig Analysis Manual"
+.TH sdagent 8 "19 Mar 2014" "sdagent" "Supportconfig Analysis Manual"
 .SH NAME
-sdagent - Supportconfig Analysis Agent Manager
+sdagent - SCA Agent Manager
 .SH SYNOPSIS
 sdagent [OPTIONS]
 .SH DESCRIPTION
