man page headers

--- a/man/sdagent-config.8
+++ b/man/sdagent-config.8
@@ -1,4 +1,4 @@
-.TH sdagent-config 8 "18 Mar 2014" "sdagent-config" "Supportconfig Analysis Manual"
+.TH SDAGENT-CONFIG 8 "20 Mar 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent-config - SCA Agent Configuration Tool
 .SH SYNOPSIS
