--- a/man/sdagent-health.8
+++ b/man/sdagent-health.8
@@ -1,4 +1,4 @@
-.TH sdagent-health 8 "18 Mar 2014" "sdagent-health" "Support Utilities Manual"
+.TH SDAGENT-HEALTH 8 "20 Mar 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent-health - SCA Agent Health Check Tool
 .SH SYNOPSIS
