--- a/man/sdagent-health.conf.5
+++ b/man/sdagent-health.conf.5
@@ -1,4 +1,4 @@
-.TH sdagent-health.conf 5 "18 Mar 2014" "sdagent-patterns.conf" "Supportconfig Analysis Manual"
+.TH SDAGENT-HEALTH.CONF 5 "20 Mar 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent-health.conf - Supportconfig Diagnostic Agent Health Tool specific configuration file
 .SH DESCRIPTION
