--- a/man/sdagent-monitor.8
+++ b/man/sdagent-monitor.8
@@ -1,4 +1,4 @@
-.TH sdagent-monitor 8 "18 Mar 2014" "sdagent-monitor" "Support Utilities Manual"
+.TH SDAGENT-MONITOR 8 "20 Mar 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent-monitor - SCA Agent Monitor Tool
 .SH SYNOPSIS
