--- a/man/sdagent-patterns.8
+++ b/man/sdagent-patterns.8
@@ -1,4 +1,4 @@
-.TH sdagent-patterns 8 "18 Mar 2014" "sdagent-patterns" "Supportconfig Analysis Manual"
+.TH SDAGENT-PATTERNS 8 "20 Mar 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent-patterns - SCA Agent Pattern Updater
 .SH SYNOPSIS
