--- a/man/sdagent-worker.conf.5
+++ b/man/sdagent-worker.conf.5
@@ -1,4 +1,4 @@
-.TH sdagent-worker.conf 5 "01 Mar 2013" "sdagent-worker.conf" "Supportconfig Analysis Manual"
+.TH SDAGENT-WORKER.CONF 5 "20 Mar 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent-worker.conf - Supportconfig Diagnostic Agent Worker Thread specific configuration file
 .SH DESCRIPTION
@@ -21,5 +21,5 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, see <http://www.gnu.org/licenses/>.
 .SH SEE ALSO
 .BR sdagent.conf (5)
-.BR sdagent-worker (1)
+.BR sdagent-worker (8)
 
