--- a/man/sdagent.8
+++ b/man/sdagent.8
@@ -1,4 +1,4 @@
-.TH sdagent 8 "19 Mar 2014" "sdagent" "Supportconfig Analysis Manual"
+.TH SDAGENT 8 "20 Mar 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent - SCA Agent Manager
 .SH SYNOPSIS
