--- a/man/sdagent.conf.5
+++ b/man/sdagent.conf.5
@@ -1,4 +1,4 @@
-.TH sdagent.conf 5 "18 Mar 2014" "sdagent.conf" "Supportconfig Analysis Manual"
+.TH SDAGENT.CONF 5 "20 Mar 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent.conf - Supportconfig Diagnostic Agent configuration file
 .SH DESCRIPTION
