--- a/man/sdagent-monitor.conf.5
+++ b/man/sdagent-monitor.conf.5
@@ -1,4 +1,4 @@
-.TH sdagent-monitor.conf 5 "18 Mar 2014" "sdagent-monitor.conf" "Supportconfig Analysis Manual"
+.TH SDAGENT-MONITOR.CONF 5 "20 Mar 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent-monitor.conf - Supportconfig Diagnostic Agent Monitor specific configuration file
 .SH DESCRIPTION
