--- a/man/sdagent-supportconfig.conf.5
+++ b/man/sdagent-supportconfig.conf.5
@@ -1,8 +1,8 @@
-.TH SDAGENT-WORKER.CONF 5 "20 Mar 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
+.TH SDAGENT-SUPPORTCONFIG.CONF 5 "20 Mar 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
 .SH NAME
-sdagent-worker.conf - Supportconfig Diagnostic Agent Worker Thread specific configuration file
+sdagent-supportconfig.conf - Supportconfig Diagnostic Agent Worker Thread specific configuration file
 .SH DESCRIPTION
-The \fBsdagent-worker\fR script uses \fBsdagent.conf\fR for default global variable values. If \fBsdagent-worker.conf\fR is present, it will override any global variables that were set in \fBsdagent.conf\fR.
+The \fBsdagent-supportconfig\fR script uses \fBsdagent.conf\fR for default global variable values. If \fBsdagent-supportconfig.conf\fR is present, it will override any global variables that were set in \fBsdagent.conf\fR.
 .SH GLOBAL VARIABLES
 Same as \fBsdagent.conf\fR(5).
 .SH AUTHOR
@@ -21,5 +21,5 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, see <http://www.gnu.org/licenses/>.
 .SH SEE ALSO
 .BR sdagent.conf (5)
-.BR sdagent-worker (8)
+.BR sdagent-supportconfig (8)
 
