--- a/man/sdagent-health.8
+++ b/man/sdagent-health.8
@@ -1,10 +1,10 @@
-.TH SDAGENT-HEALTH 8 "20 Mar 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
+.TH SDAGENT-HEALTH 8 "03 Jul 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent-health - SCA Agent Health Check Tool
 .SH SYNOPSIS
 sdagent-health
 .SH DESCRIPTION
-Monitors the current health of agent server and it's worker threads. Runs on the agent server.
+Used to check the current health of the agent server and it's worker threads. Runs on the agent server.
 .SH OPTIONS
 .TP
 None
