Removed references to Novell bsc#1183471

--- a/man/sdagent.conf.5
+++ b/man/sdagent.conf.5
@@ -1,4 +1,4 @@
-.TH SDAGENT.CONF 5 "20 Mar 2014" "sca-appliance-agent" "Supportconfig Analysis Manual"
+.TH SDAGENT.CONF 5 "12 Mar 2021" "sca-appliance-agent" "Supportconfig Analysis Manual"
 .SH NAME
 sdagent.conf - Supportconfig Diagnostic Agent configuration file
 .SH DESCRIPTION
@@ -14,7 +14,7 @@ Run \fBsdagent-config\fR to configure.
 Examples:
 .RE
 .RS
-.B ftp://ftp.novell.com/incoming
+.B ftp://ftp.server.com/upload
 .RE
 .RS
 .B file:///srv/ftp
@@ -47,7 +47,7 @@ Run \fBsdagent-config\fR to configure.
 Examples:
 .RE
 .RS
-.B ftp://ftp.novell.com/incoming
+.B ftp://ftp.server.com/incoming
 .RE
 .RS
 .B file:///srv/ftp
